--- a/resources/Storyboard.storyboard
+++ b/resources/Storyboard.storyboard
@@ -68,46 +68,78 @@
                                 <rect key="frame" x="0.0" y="470" width="320" height="98"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="9Xd-OU-8VQ">
-                                        <rect key="frame" x="128" y="25" width="48" height="48"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="stop.png"/>
-                                        <connections>
-                                            <action selector="stop" destination="Fwb-c8-22I" eventType="touchUpInside" id="4xT-yj-cuj"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tsT-Tu-LK4">
-                                        <rect key="frame" x="34" y="17" width="64" height="64"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="play.png"/>
-                                        <connections>
-                                            <action selector="play" destination="Fwb-c8-22I" eventType="touchDown" id="8gm-3M-qRq"/>
-                                        </connections>
-                                    </button>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="Cgp-Kx-hgF">
-                                        <rect key="frame" x="192" y="17" width="108" height="64"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" id="FKp-9H-Eb4">
-                                                <rect key="frame" x="0.0" y="0.0" width="324" height="64"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="960" height="98"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tsT-Tu-LK4">
+                                                        <rect key="frame" x="33" y="17" width="64" height="64"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="play.png"/>
+                                                        <connections>
+                                                            <action selector="play" destination="Fwb-c8-22I" eventType="touchDown" id="8gm-3M-qRq"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="9Xd-OU-8VQ">
+                                                        <rect key="frame" x="128" y="25" width="48" height="48"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="stop.png"/>
+                                                        <connections>
+                                                            <action selector="stop" destination="Fwb-c8-22I" eventType="touchUpInside" id="4xT-yj-cuj"/>
+                                                        </connections>
+                                                    </button>
                                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nNb-y1-3Ir">
-                                                        <rect key="frame" x="0.0" y="10" width="108" height="44"/>
+                                                        <rect key="frame" x="200" y="20" width="108" height="58"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="pW0-3q-bnP">
+                                                        <rect key="frame" x="353" y="17" width="64" height="64"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="play.png"/>
+                                                        <connections>
+                                                            <action selector="play" destination="Fwb-c8-22I" eventType="touchDown" id="7Du-4g-wAy"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="KrG-ra-eLd">
+                                                        <rect key="frame" x="448" y="25" width="48" height="48"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="stop.png"/>
+                                                        <connections>
+                                                            <action selector="stop" destination="Fwb-c8-22I" eventType="touchUpInside" id="LvE-k6-uMR"/>
+                                                        </connections>
+                                                    </button>
                                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kiS-Wc-66Q">
-                                                        <rect key="frame" x="108" y="10" width="108" height="44"/>
+                                                        <rect key="frame" x="520" y="20" width="108" height="58"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ZQx-De-c4S">
+                                                        <rect key="frame" x="673" y="17" width="64" height="64"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="play.png"/>
+                                                        <connections>
+                                                            <action selector="play" destination="Fwb-c8-22I" eventType="touchDown" id="pIN-6m-9yD"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="NS7-7d-DRl">
+                                                        <rect key="frame" x="768" y="25" width="48" height="48"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" image="stop.png"/>
+                                                        <connections>
+                                                            <action selector="stop" destination="Fwb-c8-22I" eventType="touchUpInside" id="RYS-ZQ-fjk"/>
+                                                        </connections>
+                                                    </button>
                                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NeK-y0-Hjp">
-                                                        <rect key="frame" x="216" y="10" width="108" height="44"/>
+                                                        <rect key="frame" x="840" y="20" width="108" height="58"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -144,6 +176,7 @@
                         <outlet property="playlistTable" destination="Cz5-hC-AHC" id="W2r-Um-aR2"/>
                         <outlet property="stingPage" destination="zOQ-cv-f9K" id="sNv-MG-Uu4"/>
                         <outlet property="stingScrollView" destination="Cgp-Kx-hgF" id="ei4-71-Ozy"/>
+                        <outlet property="stingView" destination="FKp-9H-Eb4" id="Sr4-ee-Ttc"/>
                         <outlet property="titleLabel0" destination="nNb-y1-3Ir" id="lGn-gQ-IcR"/>
                         <outlet property="titleLabel1" destination="kiS-Wc-66Q" id="21k-OW-lim"/>
                         <outlet property="titleLabel2" destination="NeK-y0-Hjp" id="jGj-NA-Q4m"/>
